--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="description">a persons image</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_group_date">Create group date</string>
+    <string name="post_photo">Post photo</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
 </resources>
