--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="post_photo">Post photo</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
+    <string name="invited">invited</string>
 </resources>
