--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">20first</string>
     <string name="description">a persons image</string>
+    <string name="App_ID">ca-app-pub-4376907170893348~8592812174</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_group_date">Create group date</string>
@@ -8,4 +9,5 @@
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
     <string name="invited">invited</string>
+
 </resources>
