Mainpage.java working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">20first</string>
+    <string name="app_name">Litup</string>
     <string name="description">a persons image</string>
     <string name="App_ID">ca-app-pub-4376907170893348~8592812174</string>
     <!-- TODO: Remove or change this placeholder text -->
